--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Seminário Dunamis</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
